Kolokvijum1[Priprema]/Auto/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID

    8 body: _LBRACKET variable_list statement_list _RBRACKET

    9 variable_list: %empty
   10              | variable_list variable

   11 variable: _TYPE _ID _SEMICOLON
   12         | _AUTO _ID _SEMICOLON

   13 statement_list: %empty
   14               | statement_list statement

   15 statement: compound_statement
   16          | assignment_statement
   17          | if_statement
   18          | return_statement

   19 compound_statement: _LBRACKET statement_list _RBRACKET

   20 $@2: %empty

   21 assignment_statement: _ID _ASSIGN num_exp $@2 _SEMICOLON

   22 num_exp: exp
   23        | num_exp _AROP exp

   24 exp: literal
   25    | _ID
   26    | function_call
   27    | _LPAREN num_exp _RPAREN

   28 literal: _INT_NUMBER
   29        | _UINT_NUMBER

   30 $@3: %empty

   31 function_call: _ID $@3 _LPAREN argument _RPAREN

   32 argument: %empty
   33         | num_exp

   34 if_statement: if_part
   35             | if_part _ELSE statement

   36 if_part: _IF _LPAREN rel_exp _RPAREN statement

   37 rel_exp: num_exp _RELOP num_exp

   38 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 7 11
_IF (259) 36
_ELSE (260) 35
_RETURN (261) 38
_ID (262) 5 7 11 12 21 25 31
_INT_NUMBER (263) 28
_UINT_NUMBER (264) 29
_LPAREN (265) 5 27 31 36
_RPAREN (266) 5 27 31 36
_LBRACKET (267) 8 19
_RBRACKET (268) 8 19
_ASSIGN (269) 21
_SEMICOLON (270) 11 12 21 38
_AUTO (271) 12
_AROP (272) 23
_RELOP (273) 37
ONLY_IF (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
function_list (22)
    on left: 2 3, on right: 1 3
function (23)
    on left: 5, on right: 2 3
$@1 (24)
    on left: 4, on right: 5
parameter (25)
    on left: 6 7, on right: 5
body (26)
    on left: 8, on right: 5
variable_list (27)
    on left: 9 10, on right: 8 10
variable (28)
    on left: 11 12, on right: 10
statement_list (29)
    on left: 13 14, on right: 8 14 19
statement (30)
    on left: 15 16 17 18, on right: 14 35 36
compound_statement (31)
    on left: 19, on right: 15
assignment_statement (32)
    on left: 21, on right: 16
$@2 (33)
    on left: 20, on right: 21
num_exp (34)
    on left: 22 23, on right: 21 23 27 33 37 38
exp (35)
    on left: 24 25 26 27, on right: 22 23
literal (36)
    on left: 28 29, on right: 24
function_call (37)
    on left: 31, on right: 26
$@3 (38)
    on left: 30, on right: 31
argument (39)
    on left: 32 33, on right: 31
if_statement (40)
    on left: 34 35, on right: 17
if_part (41)
    on left: 36, on right: 34 35
rel_exp (42)
    on left: 37, on right: 36
return_statement (43)
    on left: 38, on right: 18


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


State 14

    8 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 9 (variable_list)

    variable_list  go to state 16


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 16

    8 body: _LBRACKET variable_list . statement_list _RBRACKET
   10 variable_list: variable_list . variable

    _TYPE  shift, and go to state 17
    _AUTO  shift, and go to state 18

    $default  reduce using rule 13 (statement_list)

    variable        go to state 19
    statement_list  go to state 20


State 17

   11 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 21


State 18

   12 variable: _AUTO . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 19

   10 variable_list: variable_list variable .

    $default  reduce using rule 10 (variable_list)


State 20

    8 body: _LBRACKET variable_list statement_list . _RBRACKET
   14 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27

    statement             go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33


State 21

   11 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 34


State 22

   12 variable: _AUTO _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 35


State 23

   36 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 36


State 24

   38 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 41
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 25

   21 assignment_statement: _ID . _ASSIGN num_exp $@2 _SEMICOLON

    _ASSIGN  shift, and go to state 45


State 26

   19 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 46


State 27

    8 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 8 (body)


State 28

   14 statement_list: statement_list statement .

    $default  reduce using rule 14 (statement_list)


State 29

   15 statement: compound_statement .

    $default  reduce using rule 15 (statement)


State 30

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 31

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 32

   34 if_statement: if_part .
   35             | if_part . _ELSE statement

    _ELSE  shift, and go to state 47

    $default  reduce using rule 34 (if_statement)


State 33

   18 statement: return_statement .

    $default  reduce using rule 18 (statement)


State 34

   11 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 11 (variable)


State 35

   12 variable: _AUTO _ID _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 36

   36 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 48
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    rel_exp        go to state 49


State 37

   25 exp: _ID .
   31 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 30 ($@3)
    $default  reduce using rule 25 (exp)

    $@3  go to state 50


State 38

   28 literal: _INT_NUMBER .

    $default  reduce using rule 28 (literal)


State 39

   29 literal: _UINT_NUMBER .

    $default  reduce using rule 29 (literal)


State 40

   27 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 51
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 41

   23 num_exp: num_exp . _AROP exp
   38 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 52
    _AROP       shift, and go to state 53


State 42

   22 num_exp: exp .

    $default  reduce using rule 22 (num_exp)


State 43

   24 exp: literal .

    $default  reduce using rule 24 (exp)


State 44

   26 exp: function_call .

    $default  reduce using rule 26 (exp)


State 45

   21 assignment_statement: _ID _ASSIGN . num_exp $@2 _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 54
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 46

   14 statement_list: statement_list . statement
   19 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 55

    statement             go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33


State 47

   35 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 56
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33


State 48

   23 num_exp: num_exp . _AROP exp
   37 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 53
    _RELOP  shift, and go to state 57


State 49

   36 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 58


State 50

   31 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 59


State 51

   23 num_exp: num_exp . _AROP exp
   27 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 60
    _AROP    shift, and go to state 53


State 52

   38 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 38 (return_statement)


State 53

   23 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    exp            go to state 61
    literal        go to state 43
    function_call  go to state 44


State 54

   21 assignment_statement: _ID _ASSIGN num_exp . $@2 _SEMICOLON
   23 num_exp: num_exp . _AROP exp

    _AROP  shift, and go to state 53

    $default  reduce using rule 20 ($@2)

    $@2  go to state 62


State 55

   19 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 19 (compound_statement)


State 56

   35 if_statement: if_part _ELSE statement .

    $default  reduce using rule 35 (if_statement)


State 57

   37 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 63
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 58

   36 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 64
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33


State 59

   31 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    $default  reduce using rule 32 (argument)

    num_exp        go to state 65
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    argument       go to state 66


State 60

   27 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 27 (exp)


State 61

   23 num_exp: num_exp _AROP exp .

    $default  reduce using rule 23 (num_exp)


State 62

   21 assignment_statement: _ID _ASSIGN num_exp $@2 . _SEMICOLON

    _SEMICOLON  shift, and go to state 67


State 63

   23 num_exp: num_exp . _AROP exp
   37 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 53

    $default  reduce using rule 37 (rel_exp)


State 64

   36 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 36 (if_part)


State 65

   23 num_exp: num_exp . _AROP exp
   33 argument: num_exp .

    _AROP  shift, and go to state 53

    $default  reduce using rule 33 (argument)


State 66

   31 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 68


State 67

   21 assignment_statement: _ID _ASSIGN num_exp $@2 _SEMICOLON .

    $default  reduce using rule 21 (assignment_statement)


State 68

   31 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 31 (function_call)
